<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filtersRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:cardCornerRadius="@dimen/filters_bottom_sheet_dialog_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guide_line_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guide_line_margin" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="@dimen/close_button_filters_width"
            android:layout_height="@dimen/close_button_filters_height"
            android:layout_marginTop="@dimen/close_button_filters_margin_top"
            android:backgroundTint="@color/cyan_dark"
            android:insetLeft="@dimen/close_button_filters_inset_left"
            android:insetTop="@dimen/close_button_filters_inset_top"
            android:insetRight="@dimen/close_button_filters_inset_right"
            android:insetBottom="@dimen/close_button_filters_inset_bottom"
            app:icon="@drawable/ic_close"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/close_button_filters_icon_padding"
            app:layout_constraintStart_toEndOf="@id/guideLine_1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mark_medium"
            android:text="@string/filter_options"
            android:textColor="@color/cyan_dark"
            android:textSize="@dimen/filter_option_textview_text_size"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnClose"
            app:layout_constraintEnd_toStartOf="@id/btnDoneFilters"
            app:layout_constraintStart_toEndOf="@id/btnClose" />

        <Button
            android:id="@+id/btnDoneFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/done_btn_margin_top"
            android:fontFamily="@font/mark_medium"
            android:text="@string/done"
            android:textAllCaps="false"
            app:layout_constraintBaseline_toBaselineOf="@+id/btnClose"
            app:layout_constraintEnd_toStartOf="@id/guideLine_2" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/guideLine_2"
            app:layout_constraintStart_toEndOf="@id/guideLine_1"
            app:layout_constraintTop_toBottomOf="@+id/btnClose">

            <TextView
                android:id="@+id/tvBrand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/brand_textview_margin_top"
                android:layout_marginBottom="@dimen/brand_textview_margin_bottom"
                android:fontFamily="@font/mark_bold"
                android:text="@string/brand"
                android:textColor="@color/cyan_dark"
                android:textSize="@dimen/brand_textview_text_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/brandTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/brand"
                app:endIconDrawable="@drawable/ic_arrow_bottom">

                <AutoCompleteTextView
                    android:id="@+id/brandAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/mark_pro"
                    android:inputType="none"
                    android:textColor="@color/cyan_dark"
                    android:textSize="@dimen/brand_auto_complete_text_view_text_size"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/price_textview_margin_top"
                android:layout_marginBottom="@dimen/price_textview_margin_bottom"
                android:fontFamily="@font/mark_bold"
                android:text="@string/price"
                android:textColor="@color/cyan_dark"
                android:textSize="@dimen/price_textview_text_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/priceTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                app:endIconDrawable="@drawable/ic_arrow_bottom">

                <AutoCompleteTextView
                    android:id="@+id/priceAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/mark_pro"
                    android:inputType="none"
                    android:textColor="@color/cyan_dark"
                    android:textSize="@dimen/price_auto_complete_text_view_text_size"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_textview_margin_top"
                android:layout_marginBottom="@dimen/size_textview_margin_bottom"
                android:fontFamily="@font/mark_bold"
                android:text="@string/size"
                android:textColor="@color/cyan_dark"
                android:textSize="@dimen/price_textview_text_size" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sizeTextInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_text_input_margin_bottom"
                android:hint="@string/size"
                app:endIconDrawable="@drawable/ic_arrow_bottom">

                <AutoCompleteTextView
                    android:id="@+id/sizeAutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/mark_pro"
                    android:inputType="none"
                    android:textColor="@color/cyan_dark"
                    android:textSize="@dimen/size_auto_complete_text_view_text_size"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>