<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="@dimen/item_home_store_card_view_margin_start"
    android:layout_marginEnd="@dimen/item_home_store_card_view_margin_end"
    app:cardCornerRadius="@dimen/item_home_store_card_view_card_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgSlideHomeStore"
            android:layout_width="match_parent"
            android:layout_height="@dimen/slide_home_store_height"
            android:contentDescription="@string/home_store_img_description"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/shadow_slide_home_store_height"
            android:src="@drawable/shadow"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/shadow" />

        <ImageView
            android:id="@+id/imgNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_new"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/new_imageview_margin_start"
            android:layout_marginTop="@dimen/new_imageview_margin_top"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTitleSlideHomeStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Iphone 12"
            android:fontFamily="@font/mark_bold"
            android:textSize="@dimen/title_slide_home_store_text_size"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/imgNew"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/title_slide_home_store_margin_start"
            android:layout_marginTop="@dimen/title_slide_home_store_margin_top" />

        <TextView
            android:id="@+id/tvSubTitleSlideHomeStore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Súper. Mega. Rápido."
            android:fontFamily="@font/mark_pro"
            android:textSize="@dimen/sub_title_slide_home_store_text_size"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleSlideHomeStore"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/sub_title_slide_home_store_margin_start"
            android:layout_marginTop="@dimen/sub_title_slide_home_store_margin_top" />

        <Button
            android:id="@+id/btnBuyNow"
            android:layout_width="@dimen/bnt_buy_now_width"
            android:layout_height="@dimen/bnt_buy_now_height"
            android:text="@string/buy_now"
            android:textColor="@color/black"
            android:textSize="@dimen/bnt_buy_now_text_size"
            android:fontFamily="@font/mark_bold"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubTitleSlideHomeStore"
            android:layout_marginTop="@dimen/bnt_buy_now_margin_top"
            android:layout_marginStart="@dimen/bnt_buy_now_margin_start"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:focusable="true"
            tools:ignore="UnusedAttribute" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>